src/styles/global.css
html {
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  font-size: 18px;
}

body {
  font-weight: normal;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 400;
  text-rendering: optimizeLegibility;
  margin: 0px;
  overflow: visible;
}

p {
  line-height: 1.6;
}

h1, h2, h3, h4, h5, h6 {
  font: 100%/1.8, sans-serif;
  font-weight: 400;
  line-height: 1.2;
}

p {
  margin-bottom: 1rem;
}

main {
    margin: 0 auto;
    padding: 0 1.0875rem 1.45rem;
    padding-bottom: 0px;
}
h1 {
  font-size: 2.5rem;
}
h2 {
  font-size: 2rem;
}
a h3 {
    text-decoration: none;
    font-size: 2.5rem;
    margin-bottom: 1rem;
    font-weight: normal;
}

nav a {
  text-decoration: none;
  color: #fff;
}

a {
  text-decoration: underline;
  color: #2c78ca;
}
  
a:hover {
  text-decoration: underline;
}

a, a:visited, a:active {
  color: #2c78ca;
}

.article p {
  margin-bottom: 0px;
}

svg {
  color: black;
}

.dark svg {
  color: #F5F5F5;
}

.blog-post .category a {
  color: black;
  text-decoration: none;
}

.blog-post a {
  color: black;
  text-decoration: underline;
}

.dark .blog-post .category a {
  color: #F5F5F5;
  text-decoration: none;
}

html {
	background-color: #F7F7F7;
	color: #444;
}

html.dark {
	background-color: #000;
	color: #F5F5F5;
}
  
.dark .nav-links a {
	color: #F5F5F5;
}

.dark .header-social a {
  color: #000;
}

.header-social a {
  color: #fff;
}

.dark a, .dark a:visited, .dark a:active {
  color: #53a6ff;
}

.dark blockquote {
	color: #F5F5F5;
}

.dark h1,
.dark h2,
.dark h3,
.dark h4,
.dark h5,
.dark h6,
.dark strong,
.dark b {
	color: #F5F5F5;
}

nav a, nav a:visited, nav a:active {
  color: black;
}

.dark nav a, .dark nav a:visited, .dark nav a:active {
  color: #F5F5F5;
}

  
  /* Single column display for phones */
  @media (max-width: 459px) {

    .blog-post-container blockquote p {
      font-size: 1.02rem;
    }

  }

  @media (max-width: 620px) {

    h1 {
      font-size: 2.5rem;
    }

    .site-description {
      font-size: normal;
    }
  
    main {
      padding: 0 0.5rem 0.5rem;
    }
    
  }

  @media (max-width: 756px) {

  .page-container {
      padding: 0 0.5rem 0.5rem;
  }  

}

